@@ -28,13 +28,12 @@ plugins {
 dependencies {
     implementation(libs.kotlinStdlib)
     testImplementation(libs.junit)
+    testImplementation(libs.kotlinMetadataJvm)
     testImplementation(libs.robolectric)
 
     testCompileOnly(libs.kotlinCompiler)
     testRuntimeOnly(
-        project(
-           ":compose:compiler:compiler-hosted:integration-tests:kotlin-compiler-repackaged"
-        )
+        project(":compose:compiler:compiler-hosted:integration-tests:kotlin-compiler-repackaged")
     )
 
     // tools.jar required for com.sun.jdi
@@ -53,12 +52,14 @@ dependencies {
     testImplementation(libs.protobufLite)
     testImplementation(libs.guavaAndroid)
     testImplementation(project(":compose:compiler:compiler-hosted"))
+    testImplementation(projectOrArtifact(":compose:foundation:foundation"))
     testImplementation(projectOrArtifact(":compose:material:material"))
     testImplementation(project(":compose:runtime:runtime"))
     testImplementation(projectOrArtifact(":compose:ui:ui"))
     testImplementation("androidx.core:core-ktx:1.1.0")
     testImplementation("androidx.activity:activity-ktx:1.2.0")
     testImplementation("org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3.4")
+    testImplementation("com.google.dagger:dagger:2.40.1")
 }
 
 afterEvaluate {
@@ -66,6 +67,7 @@ afterEvaluate {
         t.dependsOn(":compose:compiler:compiler:embeddedPlugin")
 
         maxHeapSize("1024m")
+        t.jvmArgs += ["--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED"]
     }
 }
 
@@ -79,14 +81,8 @@ android {
     namespace "androidx.compose.runtime.tests"
 }
 
-tasks.withType(KotlinCompile).configureEach {
-    kotlinOptions {
-        freeCompilerArgs += ["-opt-in=kotlin.RequiresOptIn"]
-    }
-}
-
 androidx {
-    name = "AndroidX Compiler CLI Tests"
+    name = "Compiler CLI Tests"
     publish = Publish.NONE
     inceptionYear = "2019"
     description = "Contains test for the compose compiler plugin"
